# codebiu

./: .gitignore  README.md
code/backend/server_py/: .env  README.md  config.yaml  config_template_full.yaml  pyproject.toml  pytest.ini  rbac_model.conf  test_presigned_urls.py
code/backend/server_py/doc/dev/: dir.md  lib.md
code/backend/server_py/doc/sql/: module_template.sql
code/backend/server_py/doc/tag_doc/: tag_0.0.1.md  tag_0.0.2.md  tag_todo.md  version_info.md
code/backend/server_py/public/ai/: index.html
code/backend/server_py/public/main/: index.html
code/backend/server_py/public/template/: chat.html  index.html
code/backend/server_py/src/: app.py
code/backend/server_py/src/common/config/: db.py  index.py  lifespan.py  log.py  net.py  path.py  server.py
code/backend/server_py/src/common/enum/: code.py  platform.py
code/backend/server_py/src/module_ai/: __init__.py
code/backend/server_py/src/module_ai/config/: ocr.py  server.py
code/backend/server_py/src/module_ai/controller/: __init__.py  add.py  llm_base.py  model_config.py  ocr.py  static.py  translate.py
code/backend/server_py/src/module_ai/dao/: llm_base_prompt.py  model_config.py  translate_prompt.py
code/backend/server_py/src/module_ai/dependencies/: llm_base.py  model_config.py  ocr.py  translate.py
code/backend/server_py/src/module_ai/do/: llm_base.py  model_config.py  ocr.py  translate.py
code/backend/server_py/src/module_ai/service/: llm_base.py  model_config.py  ocr.py  translate.py
code/backend/server_py/src/module_authorization/: README.md
code/backend/server_py/src/module_authorization/config/: casbin_config.py  server.py  token.py
code/backend/server_py/src/module_authorization/controller/: __init__.py  auth.py  casbin_rule.py  permission.py  role.py  token.py  user.py
code/backend/server_py/src/module_authorization/dao/: casbin_rule.py  permission.py  role.py  token.py  user.py
code/backend/server_py/src/module_authorization/dependencies/: auth.py  casbin_rule.py  permission.py  role.py  token.py  user.py
code/backend/server_py/src/module_authorization/do/: auth.py  casbin_rule.py  permission.py  role.py  token.py  user.py
code/backend/server_py/src/module_authorization/service/: auth.py  casbin_rule.py  permission.py  role.py  token.py  user.py
code/backend/server_py/src/module_contact/config/: email.py  server.py
code/backend/server_py/src/module_contact/do/: email.py
code/backend/server_py/src/module_dev_tools/: README.md  __init__.py
code/backend/server_py/src/module_dev_tools/config/: server.py
code/backend/server_py/src/module_dev_tools/controller/: __init__.py  template_string.py
code/backend/server_py/src/module_dev_tools/dao/: template_string.py
code/backend/server_py/src/module_dev_tools/dependencies/: template_string.py
code/backend/server_py/src/module_dev_tools/do/: template_string.py
code/backend/server_py/src/module_dev_tools/service/: template_string.py
code/backend/server_py/src/module_file/: README.md  __init__.py
code/backend/server_py/src/module_file/config/: filesystem.py  server.py
code/backend/server_py/src/module_file/controller/: __init__.py  file.py  filesystem.py
code/backend/server_py/src/module_office/: README.md
code/backend/server_py/tests/: conftest.py
code/backend/server_py/tools/: README.md
code/backend/server_py/tools/docker_build/: Dockerfile.dist  build.py  build.sh  build_docker.sh  linux_build copy.sh  win_build.bat
code/backend/server_py/tools/docker_compose/: clean.sh  docker-compose.yml  start.sh  stop.sh
code/backend/server_py/tools/docker_dev/: Dockerfile.dev  build.sh
code/backend/server_py/tools/test/: run_tests.py
code/other/template/server_base_py/: config.yaml  pyproject.toml
code/other/template/server_base_py/src/: app.py  main.py
(+346 files in other folders)
