[project]
name = "base-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiofiles>=25.1.0",
    # 权限
    "casbin>=1.43.0",
    "casbin-async-sqlalchemy-adapter>=1.13.0",
    "dynaconf>=3.2.11",
    "fakeredis>=2.32.1",
    "fastapi>=0.116.1",
    "nuitka>=2.8.9",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    # auth
    "pyjwt>=2.10.1",
    "pwdlib[argon2]>=0.2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    # ocr
    "opencv-contrib-python>=4.11.0.86",
    "onnxruntime>=1.22.1",
    "pillow>=11.3.0",
    "shapely>=2.1.1",
    "pyclipper>=1.4.0",
    "freetype-py>=2.5.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    # 浏览器操作
    "playwright>=1.55.0",
    "brotlicffi>=1.1.0.0",
    "polars>=1.35.2",
    "openpyxl>=3.1.5",
    "fastexcel>=0.17.2",
    "xlsxwriter>=3.2.9",
    # langchain
    "deepagents>=0.2.8",
    "langchain-openai>=1.1.0",
    "langchain-aws>=1.1.0",
    # databses
    "kuzu>=0.11.3",
    "neo4j>=6.0.3",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "universal-pathlib>=0.3.8",
    "lancedb>=0.25.3",
    "pymilvus>=2.6.5",
    "pyarrow>=22.0.0",
    "networkx>=3.6.1",
    "bidict>=0.23.1",
    "langchain-ollama>=1.0.1",
    "celery>=5.6.1",
]

[[tool.uv.index]]
# 清华源
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# 阿里源
# url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff.lint.per-file-ignores]
# 起始函数验证规则排除
"app.py" = ["F401"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"  # 可选值："auto", "strict", "off"
testpaths = ["tests"]
pythonpath = ["src"]
# ; 设置输出
addopts = "-v -s --log-cli-level=INFO"
# --maxfail: 出现几个失败才终止
maxfail = 2
