[project]
name = "server-base-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi>=0.121.2",
    "uvicorn>=0.30.0",
]
[tool.ruff.lint.per-file-ignores]
# 起始函数验证规则排除
"app.py" = ["F401"]
"__init__.py" = ["F401"]